--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Resume
-url: 'https://ysm0622.github.io/resume'
-baseurl: '/ysm0622.github.io/resume' #change it according to your repository name
+url: 'https://ysm0622.github.io/Resume'
+baseurl: '/ysm0622.github.io/Resume' #change it according to your repository name
 
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
