--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and pro
 #sidebar links
 email: ysm0622@gmail.com
 phone: 010 4939 0023
-website: ysm0622.github.io #do not add http://
+website: ysm0622.github.io/Resume #do not add http://
 linkedin: ysm0622
 github: ysm0622
 
