--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ style: styles-6
 #Profile information
 name: Chris Yang
 tagline: Software Developer<br>Data Scientist
-pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
 email: ysm0622@gmail.com
