--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: Resume
-url: 'https://ysm0622.github.io/Resume'
+url: 'https://ysm0622.github.io/cv'
 baseurl: '' #change it according to your repository name
 
 
