--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: 'CV'
 url: 'https://ysm0622.github.io/cv'
-baseurl: '/cv' #change it according to your repository name
+baseurl: 
 
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
