--- a/_config.yml
+++ b/_config.yml
@@ -23,5 +23,6 @@ phone: +82 10 4939 0023
 #website: ysm0622.github.io/Resume #do not add http://
 linkedin: ysm0622
 github: ysm0622
+photo: ysm0622
 
 #Update all the sections by editing the files inside _includes folder.
